# pdf-mutation

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pdf_dogfood.py  pdf_dogfood_summary.py  pdf_fixture.py  pdf_glyph_replace.py  pdf_inventory.py  pyproject.toml
.codex/: policy-selector-install.json
.codex/skills/repo-policy-selector/: SKILL.md  release-manifest.json
.codex/skills/repo-policy-selector/agents/: openai.yaml
.codex/skills/repo-policy-selector/policy-library/: SCHEMA.md  catalog.yaml
.codex/skills/repo-policy-selector/policy-library/modules/: architecture-guardrails.md  backup-and-recovery-operations.md  branch-and-integration-strategy.md  cloud-drive-course-governance.md  (+40 more)
.codex/skills/repo-policy-selector/references/: dev-plan.md  policy-shapes.md  selection-workflow.md
.codex/skills/repo-policy-selector/releases/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
.codex/skills/repo-policy-selector/scripts/: audit_planning_contract.py  check_for_updates.py  check_policy_upgrades.py  generate_release_notes.py  install_selector_bundle.py  manage_policy.py  plan_policy_upgrade_actions.py  publish_github_release.py  release_cut.py  release_selector_bundle.py  select_policy.py  sync_policy_library.py
.codex/skills/repo-policy-selector/tests/: test_select_policy.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/dev/: RELEASE_CHECKLIST.md  dogfood-runbook.md  segmented-plan-contract.md
docs/dev/notes/: 2026-05-17-policy-adoption.md  2026-05-19-v0.1.2-release.md  2026-05-20-v0.1.3-release.md
pdf_mutation/: __init__.py  adapters.py  cli.py  cmap.py  engine.py  layout.py  reports.py
tests/: test_pdf_glyph_replace.py
tests/fixtures/: dogfood-manifest.jsonl
(+8 files in other folders)
