[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-mutation"
version = "0.1.3"
description = "Deterministic glyph-preserving PDF text replacement CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Cochran Research Group" }
]
keywords = ["pdf", "qdf", "glyph", "text-replacement"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]

[project.scripts]
pdf-glyph-replace = "pdf_glyph_replace:main"
pdf-fixture-qdf = "pdf_fixture:main"
pdf-inventory = "pdf_inventory:main"
pdf-dogfood = "pdf_dogfood:main"
pdf-dogfood-summary = "pdf_dogfood_summary:main"

[tool.setuptools]
py-modules = ["pdf_glyph_replace", "pdf_fixture", "pdf_inventory", "pdf_dogfood", "pdf_dogfood_summary"]
